# bibleref

./: CHANGES.md  LICENSE  README.md  Release Process.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pdoc_docs.yml
bible/: bible-reference.lark  data.py  parser.py  reference.py  util.py
bibleref/: __init__.py  data.py  parser.py  ref.py  reference.py  util.py
examples/: example.py
src/bibleref/: __init__.py  data.py  parser.py  ref.py  util.py
test/: test_bibleref.py  test_parser.py  test_reference.py  test_util.py
test/example/: example.py
