[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bibleref"
version = "0.12.0"

description = "A package for handling references to Bible books, verses and verse-ranges."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "lark>=1.1.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Religion",
]

[project.urls]
"Documentation" = "https://multiscript.app/bibleref"
"Source" = "https://github.com/multiscript/bibleref"
"Issue Tracker" = "https://github.com/multiscript/bibleref/issues"

[tool.setuptools.packages.find]
where = ["src"]  
include = ["bibleref*"]  
exclude = ["tests*"] 
namespaces = false